tests/machine/x/go/group_by_join.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/group_by_join.go:14:17: undefined: Customer
../../../tests/machine/x/go/group_by_join.go:17:5: undefined: Customer
../../../tests/machine/x/go/group_by_join.go:21:14: undefined: Order
../../../tests/machine/x/go/group_by_join.go:24:5: undefined: Order
../../../tests/machine/x/go/group_by_join.go:27:5: undefined: Order
../../../tests/machine/x/go/group_by_join.go:31:20: undefined: Stat
../../../tests/machine/x/go/group_by_join.go:61:16: undefined: Stat
../../../tests/machine/x/go/group_by_join.go:63:30: undefined: Stat

1: //go:build ignore
